# pretix-mtn-momo

./: .gitlab-ci.yml  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_mtn_momo/: apps.py  payment.py  signals.py  tasks.py  urls.py  views.py
pretix_mtn_momo/templates/pretix_mtn_momo/: checkout_payment_confirm.html  checkout_payment_form.html  control.html  pending.html
