[project]
name = "pretix-mtn-momo"
dynamic = ["version"]
description = "Accept payments through MTN Mobile Money (MoMo), a popular payment method in a number of African countries."
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_mtn_momo = "pretix_mtn_momo:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-mtn-momo"
repository = "https://github.com/pretix/pretix-mtn-momo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_mtn_momo.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
